// 定义项目 API 的 proto 文件 可以同时描述 gRPC 和 HTTP API
// protobuf 文件参考:
//  - https://developers.google.com/protocol-buffers/
syntax = "proto3";

import "gogoproto/gogo.proto";
import "google/protobuf/empty.proto";

// package 命名使用 {appid}.{version} 的方式, version 形如 v1, v2 ..
package datasource.admin.v1;

// NOTE: 最后请删除这些无用的注释 (゜-゜)つロ

option go_package = "api";
option (gogoproto.goproto_getters_all) = false;

service datasource {
  rpc ModelList(ModelListRequest) returns(ModelListReply){};
  rpc ModelAll(NoArgRequest) returns(ModelAllReply);
  rpc ModelItemList(ModelItemListRequest) returns(ModelItemListReply){};
  rpc ModelDetail(ModelDetailRequest) returns(ModelDetailReply){};
  rpc ModelItemDetail(ModelItemDetailRequest) returns(ItemReply){};
  rpc ModelCreate(ModelCreateRequest) returns(EmptyReply){};
  rpc ModelItemCreate(ModelItemCreateRequest) returns(EmptyReply){};
}

message NoArgRequest {}

message EmptyReply {}

message ModelListRequest {
  int32 pn = 1 [(gogoproto.moretags) = 'form:"pn" default:"1" min:"0"'];
  int32 ps = 2 [(gogoproto.moretags) = 'form:"ps" default:"20" max:"100" min:"0"'];
}

message ModelListReply {
  repeated Model list = 1;
  int32 pn = 2;
  int32 ps = 3;
  int64 total = 4;
}

message ModelAllReply {
  repeated string list = 1;
}

message ModelItemListRequest {
  string model_name = 1 [(gogoproto.moretags) = 'form:"model_name"'];
  int32 pn = 2 [(gogoproto.moretags) = 'form:"pn" default:"1" min:"0"'];
  int32 ps = 3 [(gogoproto.moretags) = 'form:"ps" default:"20" max:"100" min:"0"'];
}

message ModelItemListReply {
  repeated ModelItem list = 1;
  int32 pn = 2;
  int32 ps = 3;
  int64 total = 4;
}

message ModelDetailRequest {
  string model_name = 1 [(gogoproto.moretags) = 'form:"model_name" validate:"required"'];
}

message ModelDetailReply {
  ModelSchema detail = 1;
}

message ModelSchema {
  string type = 1;
  string description = 2;
  map<string, ModelSchema> properties = 3;
  SchemaComponent component = 4;
  bool required = 5;
  string default_string = 6;
  int64 default_int = 7;
}

message SchemaComponent {
  string type = 1;
  string metadata = 2;
}

message ModelItemDetailRequest {
  string item_uuid = 1 [(gogoproto.moretags) = 'form:"item_uuid" validate:"required"'];
}

message StructedItem {
  map<string, FieldValue> item = 1;
}

message ItemReply {
  oneof item {
    StructedItem value_struct = 1;
    FieldValue value_raw = 2;
  }
}

message StringList {
  repeated string list = 1;
}

message IntList {
  repeated int64 list = 1;
}

message BoolList {
  repeated bool list = 1;
}

message ItemList {
  repeated ItemReply list = 1;
}

message FieldValue {
  oneof value {
    string value_string = 1;
    int64 value_int = 2;
    bool value_bool = 3;
    ItemReply value_item = 4;
    StringList value_string_list = 5;
    BoolList value_bool_list = 6;
    IntList value_int_list = 7;
    ItemList value_item_list = 8;
  }
}

message ModelCreateRequest {
  string model_name = 1 [(gogoproto.moretags) = 'form:"model_name" validate:"required"'];
  string model_fields = 2 [(gogoproto.moretags) = 'form:"model_fields" validate:"required"'];
  string description = 3;
  string created_by = 4;
}

message ModelItemCreateRequest {
  string model_name = 1 [(gogoproto.moretags) = 'form:"model_name" validate:"required"'];
  string value = 2 [(gogoproto.moretags) = 'form:"value" validate:"required"'];
  string business = 3;
  int32 expirable = 4;
  int64 expire_at = 5;
  string created_by = 6;
}

message Model {
  int64 id = 1;
  string name = 2;
  string description = 3;
  int64 ctime = 4 [(gogoproto.casttype) = "go-common/library/time.Time"];
  int64 mtime = 5 [(gogoproto.casttype) = "go-common/library/time.Time"];
  int32 is_deleted = 6;
  string created_by = 7;
}

message ModelField {
  int64 id = 1;
  string model_name = 2;
  string name = 3;
  string description = 4;
  string value_type = 5;
  int64 ctime = 6 [(gogoproto.casttype) = "go-common/library/time.Time"];
  int64 mtime = 7 [(gogoproto.casttype) = "go-common/library/time.Time"];
  string created_by = 8;
  string component_uuid = 9;
}

message ModelItem {
  int64 id = 1;
  string business = 2;
  string item_uuid = 3;
  string type_name = 4;
  int32 expirable = 5;
  int64 expire_at = 6;
  int64 ctime = 7 [(gogoproto.casttype) = "go-common/library/time.Time"];
  int64 mtime = 8 [(gogoproto.casttype) = "go-common/library/time.Time"];
  string created_by = 9;
}

message ItemFieldValue {
  int64 id = 1;
  string item_uuid = 2;
  string field_name = 3;
  int64 value_int = 4;
  string value_string = 5;
  string value_item_uuid = 6;
  int64 ctime = 7 [(gogoproto.casttype) = "go-common/library/time.Time"];
  int64 mtime = 8 [(gogoproto.casttype) = "go-common/library/time.Time"];
}

message ModelComponent {
  int64 id = 1;
  string component_uuid = 2;
  string type = 3;
  string metadata = 4;
  int64 ctime = 5 [(gogoproto.casttype) = "go-common/library/time.Time"];
  int64 mtime = 6 [(gogoproto.casttype) = "go-common/library/time.Time"];
  bool required = 7;
  string default_string = 8;
  int64 default_int = 9;
}